[project]
name = "quantdx"
version = "0.1.0"
description = "very cool & easy to use llm trading bot, with okx exchange v5 api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.4",
    "openai>=2.6.0",
    "pydantic>=2.12.3",
    "python-okx>=0.4.0",
    "requests>=2.32.5",
    "retrying>=1.4.2",
]
